Introduce sftp_server module.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,22 +6,43 @@ set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -pedantic -D_GLIBCXX_CONCEPT_CHECK
 include_directories("${CMAKE_HOME_DIRECTORY}")
 include_directories("${PROJECT_SOURCE_DIR}/../lib/includes")
 
+#find_library(LIBSSH, libssh)
+
+find_library(LIBSSH
+   NAMES
+      ssh
+      libssh
+   PATHS
+      /usr/lib
+      /usr/local/lib
+      /opt/local/lib
+      /sw/lib
+      ${CMAKE_LIBRARY_PATH}
+      ${CMAKE_INSTALL_PREFIX}/lib
+)
+
+if(NOT LIBSSH)
+   message(FATAL_ERROR "libssh library not found")
+endif()
+
 #add_subdirectory(./lib)
 
 #message("Home => ${CMAKE_HOME_DIRECTORY}")
-#set(
-#INCLUDES
-#${INCLUDES}
-#PARENT_SCOPE
-#)
+
+set(
+   INCLUDES
+   ${PROJECT_SOURCE_DIR}/sftp_server.h 
+)
 
 set(
    SRCFILES
    ${PROJECT_SOURCE_DIR}/main.cpp 
+   ${PROJECT_SOURCE_DIR}/sftp_server.cpp 
 )
 
 #message("${CMAKE_HOME_DIRECTORY}/../build/")
 
-add_executable(${PROJECT_NAME} ${SRCFILES}) 
+add_executable(${PROJECT_NAME} ${INCLUDES} ${SRCFILES}) 
+target_link_libraries(${PROJECT_NAME} ${LIBSSH})
 target_link_libraries(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/../lib/libsk3l3tal.so)
 
