Introduce sftp_session module.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,18 +31,20 @@ endif()
 
 set(
    INCLUDES
-   ${PROJECT_SOURCE_DIR}/sftp_server.h 
+   ${PROJECT_SOURCE_DIR}/sftp_server.h
+   ${PROJECT_SOURCE_DIR}/sftp_session.h
 )
 
 set(
    SRCFILES
-   ${PROJECT_SOURCE_DIR}/main.cpp 
-   ${PROJECT_SOURCE_DIR}/sftp_server.cpp 
+   ${PROJECT_SOURCE_DIR}/main.cpp
+   ${PROJECT_SOURCE_DIR}/sftp_server.cpp
+   ${PROJECT_SOURCE_DIR}/sftp_session.cpp
 )
 
 #message("${CMAKE_HOME_DIRECTORY}/../build/")
 
-add_executable(${PROJECT_NAME} ${INCLUDES} ${SRCFILES}) 
+add_executable(${PROJECT_NAME} ${INCLUDES} ${SRCFILES})
 target_link_libraries(${PROJECT_NAME} ${LIBSSH})
 target_link_libraries(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/../lib/libsk3l3tal.so)
 
