--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ endif()
 
 set(
    INCLUDES
+   ${PROJECT_SOURCE_DIR}/arg_parser.h
    ${PROJECT_SOURCE_DIR}/sftp_server.h
    ${PROJECT_SOURCE_DIR}/sftp_connection.h
    ${PROJECT_SOURCE_DIR}/sftp_directory.h
@@ -39,6 +40,7 @@ set(
 
 set(
    SRCFILES
+   ${PROJECT_SOURCE_DIR}/arg_parser.cpp
    ${PROJECT_SOURCE_DIR}/main.cpp
    ${PROJECT_SOURCE_DIR}/sftp_server.cpp
    ${PROJECT_SOURCE_DIR}/sftp_connection.cpp
